Deletion, creation and changing of user passwords and accounts now works.

--- a/pages/discovery_page.html
+++ b/pages/discovery_page.html
@@ -33,7 +33,7 @@
     (function loop(){
     Promise.any(requests)
       .then(response => {
-        window.location.replace(response.url);
+        window.location = response.url;
       })
       .catch(error => setTimeout(loop));
     }());
