--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<object name="discovery_page" style="width:100%;height:100%;" type="text/html" data="pages/discovery_page.html"></object>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      html *{
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      h1 {
+        text-align: center;
+      }
+      .content {
+        max-width: 500px;
+        margin: auto;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Es wird nach dem Lachei server im local network gesucht</h1>
+    <div class = "content">
+        <p>Derzeitig getesteter IP Port:</p>
+        <div id = "ip"></div>
+    </div>
+  </body>
+  <script>
+    let id = document.getElementById("ip");
+    if (!id)
+        console.log("Error getting element id")
+    id.innerHTML = "Scanne locale addressen";
+    let cur_ip = 1;
+    let base_ip = "192.168.178.";
+    let requests = [...Array(255).keys()].map(n => fetch("http://" + base_ip + (n + 1).toString() + ":18080"));
+    (function loop(){
+    Promise.any(requests)
+      .then(response => {
+        window.location = response.url;
+      })
+      .catch(error => setTimeout(loop));
+    }());
+  </script>
+</html>
